bugfix(lang): add lang property description for the main component

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -23,6 +23,16 @@
   "configuration": {
     "tagName": "noi-mobility-traffic",
     "options": [
+      {
+        "key": "lang",
+        "type": "select",
+        "label": "Two letter key for the language to be used, if omitted the widget will use the lang attribute of the closest parent element. Fallback is `en`",
+        "required": false,
+        "options": {
+          "values": ["en", "de", "it"],
+          "default": "en"
+        }
+      }
     ]
   }
 }
