--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.12",
+    "@types/node": "^14.11.2",
     "@types/puppeteer": "^3.0.1",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "rollup-plugin-dotenv": "^0.3.0"
   }
 }
