--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/geojson": "^7946.0.7",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.11.2",
     "@types/puppeteer": "^3.0.1",
