--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@stencil/core": "^2.0.1",
-    "leaflet": "^1.7.1"
+    "leaflet": "^1.7.1",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "license": "MIT",
   "devDependencies": {
