--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@stencil/sass": "^1.3.2",
     "@types/geojson": "^7946.0.7",
     "@types/jest": "^26.0.12",
+    "@types/leaflet": "^1.5.17",
     "@types/node": "^14.11.2",
     "@types/puppeteer": "^3.0.1",
     "jest": "^26.4.2",
