--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.0.1",
+    "@stencil/store": "^1.3.0",
     "leaflet": "^1.7.1",
     "resize-observer-polyfill": "^1.5.1"
   },
