massive refactor, fix blinking bug in map popup, fetch segments in one go, extract path details component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "baseUrl": ".",
+    "paths": {
+      "@noi/api/*": ["src/api/*"],
+      "@noi/api": ["src/api"],
+      "@noi/store": ["src/store"]
+    }
   },
   "include": [
     "src"
