feature: calculate urban path and distance by geoJSON, add urbamPath store, add urbanPath component, link detils distant to urpan path store

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "paths": {
       "@noi/api/*": ["src/api/*"],
       "@noi/api": ["src/api"],
+      "@noi/store/*": ["src/store/*"],
       "@noi/store": ["src/store"]
     }
   },
