add logo for webcomp store

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -12,7 +12,7 @@
       "organizationUrl": "https://noi.bz.it"
     }
   ],
-  "image": null,
+  "image": "logo.png",
   "searchTags": [],
   "dist": {
     "basePath": "build",
