--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@noi/store/*": ["src/store/*"],
       "@noi/store": ["src/store"],
       "@noi/utils": ["src/utils"],
-      "@noi/components/*": ["src/components/noi-mobility-traffic/components/*"],
+      "@noi/components/*": ["src/components/*"],
       "@noi/lang": ["src/lang"]
     }
   },
