infra: Cleanup and minimize docker files

--- a/infrastructure/docker/Dockerfile
+++ b/infrastructure/docker/Dockerfile
@@ -1,19 +1,8 @@
-FROM node:15-buster-slim as base
-ARG JENKINS_GROUP_ID=2000
-ARG JENKINS_USER_ID=2000
-RUN apt-get update \
-    && apt-get install -y wget gnupg \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 libxtst6\
-      --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
+# Do not remove, we need it for Jenkinsfile-CI.groovy
+FROM node:12
+
+ARG JENKINS_GROUP_ID=1000
+ARG JENKINS_USER_ID=1000
+
 RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     useradd --uid $JENKINS_USER_ID --gid $JENKINS_GROUP_ID --create-home jenkins
-
-FROM base as dev
-WORKDIR /
-
-FROM base as build
-COPY . .
