--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: "3"
 services:
   app:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile
+    image: node:12
     volumes:
       - ./:/code
     working_dir: /code
-    command: npm run start
+    command: sh -c "test -d node_modules || npm install; npm run start"
     ports:
-      - "8080:8080"
+      - "8999:3333"
     tty: true
+  
