--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -36,9 +36,9 @@
       "logo.svg",
       "mountains.svg",
       "noi-mobility-traffic.esm.js",
-      "noi-mobility-traffic.i18n.de.js",
-      "noi-mobility-traffic.i18n.en.js",
-      "noi-mobility-traffic.i18n.it.js",
+      "noi-mobility-traffic.i18n.de.json",
+      "noi-mobility-traffic.i18n.en.json",
+      "noi-mobility-traffic.i18n.it.json",
       "noi-mobility-traffic.js",
       "p-6c255794.entry.js",
       "p-cdb96f25.js",
