infra: Automatically update wcs-manifest.json
We list the files inside the distribution folder (cdn/noi/)
and inject them into .dist.files of the manifest json

--- a/infrastructure/docker/Dockerfile
+++ b/infrastructure/docker/Dockerfile
@@ -5,4 +5,7 @@ ARG JENKINS_GROUP_ID=1000
 ARG JENKINS_USER_ID=1000
 
 RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
-    useradd --uid $JENKINS_USER_ID --gid $JENKINS_GROUP_ID --create-home jenkins
+    useradd --uid $JENKINS_USER_ID --gid $JENKINS_GROUP_ID --create-home jenkins && \
+    apt update && \
+    apt install -y jq && \
+    rm -rf /var/lib/apt/lists/*
