infra: fix ci/cd pipelines
Add .editorconfig
Update package-lock.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3"
 services:
-  app:
-    image: node:12
-    volumes:
-      - ./:/code
-    working_dir: /code
-    command: sh -c "test -d node_modules || npm install; npm run start"
-    ports:
-      - "8999:3333"
-    tty: true
-  
+	app:
+		build:
+			context: ./
+			dockerfile: infrastructure/docker/dockerfile
+		volumes:
+			- ./:/code
+		working_dir: /code
+		command: sh -c "test -d node_modules || npm install; npm run start"
+		ports:
+			- "8999:3333"
+		tty: true
