improvements #29 #28 #30 + read urban link stations translations from the translation file + show uban bluetooth stations on the map + allow to selct urban station on the map thus highlighting the coresponding station in the list + allow to select urban station in the list, thus highlight it on the map + remove pointer cursor from the path on the map

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:cdn": "stencil build --docs --config stencil.config-cdn.ts",
     "build:local": "stencil build --docs --config  stencil.config-local.ts",
     "start": "stencil build --config  stencil.config-local.ts --dev --watch --serve",
+    "start:iframe": "stencil build --config  stencil.config-iframe.ts --dev --watch --serve",
     "start:prod": "stencil build --config stencil.config-local.ts --watch --serve",
     "test": "stencil test --spec --config stencil.config-local.ts",
     "test.watch": "stencil test --spec --watchAll --config stencil.config-local.ts",
