--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./:/code
     working_dir: /code
-    command: sh -c "test -d node_modules || npm install; npm run start"
+    command: sh -c "test -d node_modules || npm install; ln -s /code/node_modules/@stencil/core/bin/stencil /usr/local/bin/stencil; npm run start"
     ports:
       - "8999:3333"
     tty: true
