--- a/infrastructure/docker/dockerfile
+++ b/infrastructure/docker/dockerfile
@@ -3,6 +3,8 @@ FROM node:15
 ARG JENKINS_GROUP_ID=2000
 ARG JENKINS_USER_ID=2000
 
+ENV PATH="${PATH}:/code/node_modules/@stencil/core/bin"
+
 RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     useradd --uid $JENKINS_USER_ID --gid $JENKINS_GROUP_ID --create-home jenkins && \
     apt-get update && \
