--- a/infrastructure/docker/dockerfile
+++ b/infrastructure/docker/dockerfile
@@ -11,4 +11,5 @@ RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     apt-get -y upgrade && \
     apt-get -y install --no-install-recommends jq && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* && \
+	echo "export PATH=$PATH" > /etc/environment
