--- a/infrastructure/docker/dockerfile
+++ b/infrastructure/docker/dockerfile
@@ -3,7 +3,7 @@ FROM node:15
 ARG JENKINS_GROUP_ID=2000
 ARG JENKINS_USER_ID=2000
 
-ENV PATH="${PATH}:/code/node_modules/@stencil/core/bin"
+ENV PATH="${PATH}:./node_modules/@stencil/core/bin"
 
 RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     useradd --uid $JENKINS_USER_ID --gid $JENKINS_GROUP_ID --create-home jenkins && \
@@ -12,4 +12,4 @@ RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     apt-get -y install --no-install-recommends jq && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-	echo "PATH=$PATH" > /etc/environment
+	echo "export PATH=$PATH" >> /home/jenkins/.bashrc
