--- a/infrastructure/docker/dockerfile
+++ b/infrastructure/docker/dockerfile
@@ -12,4 +12,4 @@ RUN groupadd --gid $JENKINS_GROUP_ID jenkins && \
     apt-get -y install --no-install-recommends jq && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-	echo "export PATH=$PATH" > /etc/environment
+	echo "PATH=$PATH" > /etc/environment
