--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{*.groovy,dockerfile}]
+[*.{groovy,dockerfile}]
 indent_style = tab
 indent_size = 4
