--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 services:
   app:
     build:
-      context: ./
-      dockerfile: infrastructure/docker/dockerfile
+      context: .
+      dockerfile: infrastructure/docker/node.dockerfile
     volumes:
       - ./:/code
     working_dir: /code
