wcs-manifest: add p-d5fb1c3d.entry.js to files

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -50,7 +50,8 @@
       "mountains.svg",
       "p-cdb96f25.js",
       "p-d2f8bff6.js",
-      "p-27f78161.entry.js"
+      "p-27f78161.entry.js",
+      "p-d5fb1c3d.entry.js"
     ],
     "scripts": [
       {
