--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -30,7 +30,7 @@
   "searchTags": ["mobility"],
   "dist": {
     "basePath": "cdn/noi",
-    "files": ["geometries.json","host.config.json","index.esm.js","index.html","jams.json","logo.svg","mountains.svg","noi-mobility-traffic.esm.js","noi-mobility-traffic.i18n.de.json","noi-mobility-traffic.i18n.en.json","noi-mobility-traffic.i18n.it.json","noi-mobility-traffic.js","p-27f78161.entry.js","p-cdb96f25.js","p-d2f8bff6.js","p-d5fb1c3d.entry.js","search.svg","time-thresholds.json","urban-segments.json"],
+    "files": FILES_BY_CICD,
     "scripts": [
       {
         "file": "noi-mobility-traffic.esm.js",
