--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
           build-command: npm run build:cdn
           node-version: ${{env.NODE_VERSION}}
 
+      - uses: noi-techpark/github-actions/webcomp-test@v2
+
   deploy-test:
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/main'
